--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
     align-items: center;
     color: red;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    text-shadow: 1px 1px 1px black;
+    text-shadow: 1px 1px 1px rgb(15, 15, 15);
     background-image: url(images/background.jpg);
 }
 .images{
